--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
     "lint": "eslint . --ext .ts,.tsx",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "security-audit": "tsx scripts/security-audit.ts",
+    "audit": "npm audit --audit-level=moderate"
   },
   "dependencies": {
     "@azure/ai-form-recognizer": "^5.0.0",
@@ -58,14 +60,20 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
+    "cors": "^2.8.6",
+    "csurf": "^1.11.0",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.5.1",
     "express-session": "^1.18.1",
+    "express-validator": "^7.3.1",
     "framer-motion": "^11.13.1",
+    "helmet": "^8.1.0",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.3",
     "jsqr": "^1.4.0",
@@ -106,6 +114,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/connect-pg-simple": "^7.0.3",
+    "@types/cors": "^2.8.19",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.10",
@@ -120,13 +129,13 @@
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
-    "drizzle-kit": "^0.31.4",
+    "drizzle-kit": "^0.18.1",
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
     "typescript": "5.6.3",
-    "vite": "^5.4.20"
+    "vite": "^7.3.1"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
